--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -3,7 +3,6 @@
   align-items: center;
   height: 10%;
   width: 100%;
-  background-color: #2c364c;
 }
 
 .header2 {
@@ -11,7 +10,7 @@
   align-items: center;
   height: 10%;
   padding: 10px 0px;
-  background-color: #2c364c;
+  background-image: linear-gradient(135deg, #29323c 10%, #485563 100%);
 }
 
 .header-logo {
