--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -12,7 +12,7 @@
   width: 30%;
   height: 100%;
   padding: 20px;
-  background-color: #202020;
+  background-color: #25344a;
 }
 
 hr {
@@ -104,7 +104,11 @@ hr {
 .second-half {
   padding: 30px;
   width: 100%;
-  background-color: #121212;
+  display: flex;
+  flex-direction: column;
+
+  background-image: linear-gradient(135deg, #616161 10%, #9bc5c3 100%);
+  background-size: cover;
   overflow: auto;
 }
 
@@ -163,4 +167,25 @@ hr {
   justify-content: center;
   flex-direction: column;
   height: 100vh;
+}
+
+@media (max-width: 768px) {
+  .container-jobs-flex {
+    flex-direction: column;
+    height: auto;
+  }
+  .first-half {
+    width: 100%;
+  }
+  .search-container {
+    width: 90%;
+  }
+  .second-half {
+    width: 100%;
+    padding: 10px;
+    justify-content: center;
+  }
+  .failure-view-image {
+    width: 65%;
+  }
 }
