--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -3,16 +3,25 @@
   height: 100vh;
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
+  background-image: url('https://images.pexels.com/photos/1714205/pexels-photo-1714205.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+  background-size: cover;
 }
 
 .login-container {
-  background-color: #2c364c;
+  background: rgb(135, 134, 139);
+  background: linear-gradient(
+    81deg,
+    rgba(135, 134, 139, 1) 0%,
+    rgba(22, 17, 48, 1) 89%
+  );
   display: flex;
   flex-direction: column;
   padding: 20px;
   height: 50%;
   width: 40%;
+  margin-top: 30px;
   border-radius: 10px;
 }
 
@@ -46,17 +55,57 @@
   margin-bottom: 10px;
   cursor: pointer;
 }
+.login-button:hover {
+  transform: scale(1.02);
+  transition: all 0.3s ease;
+}
 
 .error-msg {
   margin-top: 3px;
   margin-bottom: 0px;
   font-family: 'Roboto';
   font-size: 12px;
-  color: #ff0b37;
+  color: #ffffff;
 }
 
 .login-logo {
   width: 30%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.credentials {
+  height: 25%;
+  width: 22%;
+  padding: 10px;
+  margin-top: 70px;
+  margin-left: auto;
+  background-color: rgb(164, 164, 162);
+  border-radius: 20px;
+  border: 1px solid rgb(197, 188, 188);
+}
+
+.credentials-heading {
+  font-size: 14px;
+  font-family: 'Bree Serif';
+}
+
+.cred-details {
+  font-size: 12px;
+  font-family: cursive;
+}
+
+@media (max-width: 768px) {
+  .credentials {
+    width: 90%;
+    height: 25%;
+    margin-top: auto;
+    margin-bottom: 10px;
+    margin-left: 0px;
+  }
+
+  .login-container {
+    width: 86%;
+    margin-top: auto;
+  }
 }
